--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     </div>
     <div id="highscore"></div>
+    <h5>Designed & Develop By Dhruv Gopani</h5>
     <script src="script.js"></script>
 </body>
 </html>
