--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </div>
     <div id="highscore"></div>
-    <h5>Designed & Develop By Dhruv Gopani &#9829;</h5>
+    <h5>&#169;Designed & Developed By Dhruv Gopani &#9829;</h5>
     <script src="script.js"></script>
 </body>
 </html>
